# ChangeLog for dev-perl/DateTime-Locale
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.11 2005/03/12 11:05:54 corsair Exp $

  12 Mar 2005; Markus Rothe <corsair@gentoo.org> DateTime-Locale-0.09.ebuild:
  Added ~ppc64 to KEYWORDS

  12 Jan 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  DateTime-Locale-0.09.ebuild:
  Added to ~amd64

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  27 Sep 2004; Bryan Østergaard,,, <kloeri@gentoo.org>
  DateTime-Locale-0.09.ebuild:
  Add ~alpha.

  22 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  DateTime-Locale-0.09.ebuild:
  Stable on sparc

  21 Sep 2004; Michael Cummings <mcummings@gentoo.org>
  DateTime-Locale-0.09.ebuild:
  Marking stable for x86

  08 Jun 2004; David Holm <dholm@gentoo.org> DateTime-Locale-0.09.ebuild:
  Added to ~ppc.

*DateTime-Locale-0.09 (05 Jun 2004)

  05 Jun 2004; Michael Cummings <mcummings@gentoo.org>
  DateTime-Locale-0.09.ebuild:
  new version on cpan

  07 May 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  DateTime-Locale-0.08.ebuild:
  Keyworded sparc

*DateTime-Locale-0.08 (04 Mar 2004)

  04 Mar 2004; Michael Cummings <mcummings@gentoo.org>
  DateTime-Locale-0.08.ebuild, metadata.xml:
  dep for gwine, bug 27301
