@@ -1,20 +1,18 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/DateTime-Locale-0.09.ebuild,v 1.9 2005/03/12 11:05:54 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/DateTime-Locale-0.09.ebuild,v 1.10 2005/03/16 15:41:46 mcummings Exp $
 
 inherit perl-module
 
 DESCRIPTION="Localization support for DateTime"
 HOMEPAGE="http://search.cpan.org/~drolsky/${P}/"
-SRC_URI="http://search.cpan.org/CPAN/authors/id/D/DR/DROLSKY/${P}.tar.gz"
+SRC_URI="mirror://cpan/authors/id/D/DR/DROLSKY/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="x86 sparc ~ppc ~alpha ~amd64 ~ppc64"
 IUSE=""
 SRC_TEST="do"
-
-style="builder"
 
 DEPEND="dev-perl/module-build
 		dev-perl/Params-Validate"
