@@ -1,18 +1,17 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/DateTime-TimeZone-0.27.ebuild,v 1.5 2005/01/12 01:52:46 sekretarz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/DateTime-TimeZone-0.27.ebuild,v 1.6 2005/03/16 15:45:30 mcummings Exp $
 
 inherit perl-module
 
 DESCRIPTION="Time zone object base class and factory"
 HOMEPAGE="http://search.cpan.org/~drolsky/${P}/"
-SRC_URI="http://search.cpan.org/CPAN/authors/id/D/DR/DROLSKY/${P}.tar.gz"
+SRC_URI="mirror://cpan/authors/id/D/DR/DROLSKY/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86 ~sparc ~ppc"
 IUSE=""
-style="builder"
 
 DEPEND="dev-perl/module-build
 		dev-perl/Params-Validate
