@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/DateTime-TimeZone-0.30.ebuild,v 1.2 2005/01/12 01:52:46 sekretarz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/DateTime-TimeZone-0.30.ebuild,v 1.3 2005/03/16 15:45:30 mcummings Exp $
 
 inherit perl-module
 
@@ -13,7 +13,6 @@ SLOT="0"
 KEYWORDS="~x86 ~sparc ~ppc ~alpha ~amd64"
 IUSE=""
 SRC_TEST="do"
-style="builder"
 
 DEPEND="dev-perl/module-build
 		>=dev-perl/Params-Validate-0.72
