@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.13 2005/01/12 01:52:46 sekretarz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.14 2005/03/16 15:45:30 mcummings Exp $
+
+  16 Mar 2005; Michael Cummings <mcummings@gentoo.org>
+  DateTime-TimeZone-0.27.ebuild, DateTime-TimeZone-0.28.ebuild,
+  DateTime-TimeZone-0.30.ebuild:
+  style cleanup
 
   12 Jan 2005; Karol Wojtaszek <sekretarz@gentoo.org>
   DateTime-TimeZone-0.30.ebuild:
