@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/DateTime-Locale
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.11 2005/03/12 11:05:54 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-Locale/ChangeLog,v 1.12 2005/03/16 15:41:46 mcummings Exp $
+
+  16 Mar 2005; Michael Cummings <mcummings@gentoo.org>
+  DateTime-Locale-0.08.ebuild, DateTime-Locale-0.09.ebuild:
+  style cleanup
 
   12 Mar 2005; Markus Rothe <corsair@gentoo.org> DateTime-Locale-0.09.ebuild:
   Added ~ppc64 to KEYWORDS
